force-app/main/default/objects/FieldChangeLog__b/FieldChangeLog__b.object-meta.xml
<CustomObject>
    <description>Universal field change history Big Object shared across all configured source objects.</description>
    <label>Field Change Log</label>
    <pluralLabel>Field Change Logs</pluralLabel>
</CustomObject>