force-app/main/default/objects/FieldChangeLog__b/fields/ChangedByUserId__c.field-meta.xml
<CustomField>
    <fullName>ChangedByUserId__c</fullName>
    <label>Changed By User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>