force-app/main/default/objects/FieldChangeLog__b/fields/ChangedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ChangedDateTime__c</fullName>
    <label>Changed Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>