force-app/main/default/objects/FieldChangeLog__b/fields/ChangeType__c.field-meta.xml
<CustomField>
    <fullName>ChangeType__c</fullName>
    <label>Change Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>