force-app/main/default/objects/FieldChangeLog__b/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>