force-app/main/default/objects/FieldChangeLog__b/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>New Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>