force-app/main/default/objects/FieldChangeLog__b/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <label>Old Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>