force-app/main/default/objects/FieldChangeLog__b/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <label>Transaction Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>